// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a button renders correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  border: none;
  box-sizing: border-box;
  color: inherit;
  cursor: pointer;
  font: inherit;
  -webkit-letter-spacing: .24em;
  -moz-letter-spacing: .24em;
  -ms-letter-spacing: .24em;
  letter-spacing: .24em;
  line-height: 4rem;
  margin: 0;
  max-height: 4.4rem;
  opacity: 1;
  overflow: hidden;
  padding: 0 3.5rem;
  text-transform: uppercase;
  -webkit-transition-property: opacity;
  transition-property: opacity;
  width: auto;
  -moz-osx-font-smoothing: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-font-smoothing: inherit;
  -webkit-backface-visibility: hidden;
  background-color: #3150A2;
  border: 0.2rem solid #3150A2;
  color: #FFFFFF;
  font-family: GT Pressura Web,Arial Narrow,Arial,sans-serif;
  font-size: 1.2rem;
  -webkit-transition-duration: 400ms;
  transition-duration: 400ms;
  -webkit-transition-timing-function: cubic-bezier(0.390,0.575,0.565,1.000);
  transition-timing-function: cubic-bezier(0.390,0.575,0.565,1.000);
}

.emotion-0:active {
  outline: 0;
}

.emotion-0:hover {
  opacity: 0.75;
}

.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: .5;
}

<body>
    <div>
      <button
        class="emotion-0 emotion-1"
        type="button"
      >
        Click Me!
      </button>
    </div>
  </body>,
  "container": .emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  border: none;
  box-sizing: border-box;
  color: inherit;
  cursor: pointer;
  font: inherit;
  -webkit-letter-spacing: .24em;
  -moz-letter-spacing: .24em;
  -ms-letter-spacing: .24em;
  letter-spacing: .24em;
  line-height: 4rem;
  margin: 0;
  max-height: 4.4rem;
  opacity: 1;
  overflow: hidden;
  padding: 0 3.5rem;
  text-transform: uppercase;
  -webkit-transition-property: opacity;
  transition-property: opacity;
  width: auto;
  -moz-osx-font-smoothing: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-font-smoothing: inherit;
  -webkit-backface-visibility: hidden;
  background-color: #3150A2;
  border: 0.2rem solid #3150A2;
  color: #FFFFFF;
  font-family: GT Pressura Web,Arial Narrow,Arial,sans-serif;
  font-size: 1.2rem;
  -webkit-transition-duration: 400ms;
  transition-duration: 400ms;
  -webkit-transition-timing-function: cubic-bezier(0.390,0.575,0.565,1.000);
  transition-timing-function: cubic-bezier(0.390,0.575,0.565,1.000);
}

.emotion-0:active {
  outline: 0;
}

.emotion-0:hover {
  opacity: 0.75;
}

.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: .5;
}

<div>
    <button
      class="emotion-0 emotion-1"
      type="button"
    >
      Click Me!
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`a button with a promise renders correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  border: none;
  box-sizing: border-box;
  color: inherit;
  cursor: pointer;
  font: inherit;
  -webkit-letter-spacing: .24em;
  -moz-letter-spacing: .24em;
  -ms-letter-spacing: .24em;
  letter-spacing: .24em;
  line-height: 4rem;
  margin: 0;
  max-height: 4.4rem;
  opacity: 1;
  overflow: hidden;
  padding: 0 3.5rem;
  text-transform: uppercase;
  -webkit-transition-property: opacity;
  transition-property: opacity;
  width: auto;
  -moz-osx-font-smoothing: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-font-smoothing: inherit;
  -webkit-backface-visibility: hidden;
  background-color: #3150A2;
  border: 0.2rem solid #3150A2;
  color: #FFFFFF;
  font-family: GT Pressura Web,Arial Narrow,Arial,sans-serif;
  font-size: 1.2rem;
  -webkit-transition-duration: 400ms;
  transition-duration: 400ms;
  -webkit-transition-timing-function: cubic-bezier(0.390,0.575,0.565,1.000);
  transition-timing-function: cubic-bezier(0.390,0.575,0.565,1.000);
}

.emotion-0:active {
  outline: 0;
}

.emotion-0:hover {
  opacity: 0.75;
}

.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: .5;
}

<body>
    <div>
      <button
        class="emotion-0 emotion-1"
        type="submit"
      >
        Click Me!
      </button>
    </div>
  </body>,
  "container": .emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  border: none;
  box-sizing: border-box;
  color: inherit;
  cursor: pointer;
  font: inherit;
  -webkit-letter-spacing: .24em;
  -moz-letter-spacing: .24em;
  -ms-letter-spacing: .24em;
  letter-spacing: .24em;
  line-height: 4rem;
  margin: 0;
  max-height: 4.4rem;
  opacity: 1;
  overflow: hidden;
  padding: 0 3.5rem;
  text-transform: uppercase;
  -webkit-transition-property: opacity;
  transition-property: opacity;
  width: auto;
  -moz-osx-font-smoothing: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-font-smoothing: inherit;
  -webkit-backface-visibility: hidden;
  background-color: #3150A2;
  border: 0.2rem solid #3150A2;
  color: #FFFFFF;
  font-family: GT Pressura Web,Arial Narrow,Arial,sans-serif;
  font-size: 1.2rem;
  -webkit-transition-duration: 400ms;
  transition-duration: 400ms;
  -webkit-transition-timing-function: cubic-bezier(0.390,0.575,0.565,1.000);
  transition-timing-function: cubic-bezier(0.390,0.575,0.565,1.000);
}

.emotion-0:active {
  outline: 0;
}

.emotion-0:hover {
  opacity: 0.75;
}

.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: .5;
}

<div>
    <button
      class="emotion-0 emotion-1"
      type="submit"
    >
      Click Me!
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`an icon button renders correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  border: none;
  box-sizing: border-box;
  color: inherit;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font: inherit;
  -webkit-letter-spacing: .24em;
  -moz-letter-spacing: .24em;
  -ms-letter-spacing: .24em;
  letter-spacing: .24em;
  line-height: 4rem;
  margin: 0;
  max-height: 4.4rem;
  opacity: 1;
  overflow: hidden;
  padding: 0;
  text-transform: uppercase;
  -webkit-transition-property: opacity;
  transition-property: opacity;
  width: auto;
  -moz-osx-font-smoothing: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-font-smoothing: inherit;
  -webkit-backface-visibility: hidden;
  background-color: #3150A2;
  border: 0.2rem solid #3150A2;
  color: #FFFFFF;
  font-family: GT Pressura Web,Arial Narrow,Arial,sans-serif;
  font-size: 1.2rem;
  -webkit-transition-duration: 400ms;
  transition-duration: 400ms;
  -webkit-transition-timing-function: cubic-bezier(0.390,0.575,0.565,1.000);
  transition-timing-function: cubic-bezier(0.390,0.575,0.565,1.000);
}

.emotion-0:active {
  outline: 0;
}

.emotion-0:hover {
  opacity: 0.75;
}

.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: .5;
}

.emotion-0 svg {
  width: 4rem;
  height: 4rem;
}

<body>
    <div>
      <button
        class="emotion-0 emotion-1"
        type="button"
      >
        <svg
          class="emotion-2 emotion-3"
        />
      </button>
    </div>
  </body>,
  "container": .emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  border: none;
  box-sizing: border-box;
  color: inherit;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font: inherit;
  -webkit-letter-spacing: .24em;
  -moz-letter-spacing: .24em;
  -ms-letter-spacing: .24em;
  letter-spacing: .24em;
  line-height: 4rem;
  margin: 0;
  max-height: 4.4rem;
  opacity: 1;
  overflow: hidden;
  padding: 0;
  text-transform: uppercase;
  -webkit-transition-property: opacity;
  transition-property: opacity;
  width: auto;
  -moz-osx-font-smoothing: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-font-smoothing: inherit;
  -webkit-backface-visibility: hidden;
  background-color: #3150A2;
  border: 0.2rem solid #3150A2;
  color: #FFFFFF;
  font-family: GT Pressura Web,Arial Narrow,Arial,sans-serif;
  font-size: 1.2rem;
  -webkit-transition-duration: 400ms;
  transition-duration: 400ms;
  -webkit-transition-timing-function: cubic-bezier(0.390,0.575,0.565,1.000);
  transition-timing-function: cubic-bezier(0.390,0.575,0.565,1.000);
}

.emotion-0:active {
  outline: 0;
}

.emotion-0:hover {
  opacity: 0.75;
}

.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: .5;
}

.emotion-0 svg {
  width: 4rem;
  height: 4rem;
}

<div>
    <button
      class="emotion-0 emotion-1"
      type="button"
    >
      <svg
        class="emotion-2 emotion-3"
      />
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`an inverted button renders correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  border: none;
  box-sizing: border-box;
  color: inherit;
  cursor: pointer;
  font: inherit;
  -webkit-letter-spacing: .24em;
  -moz-letter-spacing: .24em;
  -ms-letter-spacing: .24em;
  letter-spacing: .24em;
  line-height: 4rem;
  margin: 0;
  max-height: 4.4rem;
  opacity: 1;
  overflow: hidden;
  padding: 0 3.5rem;
  text-transform: uppercase;
  -webkit-transition-property: opacity;
  transition-property: opacity;
  width: auto;
  -moz-osx-font-smoothing: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-font-smoothing: inherit;
  -webkit-backface-visibility: hidden;
  background-color: transparent;
  border: 0.2rem solid #FFFFFF;
  color: #FFFFFF;
  font-family: GT Pressura Web,Arial Narrow,Arial,sans-serif;
  font-size: 1.2rem;
  -webkit-transition-duration: 400ms;
  transition-duration: 400ms;
  -webkit-transition-timing-function: cubic-bezier(0.390,0.575,0.565,1.000);
  transition-timing-function: cubic-bezier(0.390,0.575,0.565,1.000);
}

.emotion-0:active {
  outline: 0;
}

.emotion-0:hover {
  opacity: 0.75;
}

.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: .5;
}

<body>
    <div>
      <button
        class="emotion-0 emotion-1"
        type="button"
      >
        Click Me!
      </button>
    </div>
  </body>,
  "container": .emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  border: none;
  box-sizing: border-box;
  color: inherit;
  cursor: pointer;
  font: inherit;
  -webkit-letter-spacing: .24em;
  -moz-letter-spacing: .24em;
  -ms-letter-spacing: .24em;
  letter-spacing: .24em;
  line-height: 4rem;
  margin: 0;
  max-height: 4.4rem;
  opacity: 1;
  overflow: hidden;
  padding: 0 3.5rem;
  text-transform: uppercase;
  -webkit-transition-property: opacity;
  transition-property: opacity;
  width: auto;
  -moz-osx-font-smoothing: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-font-smoothing: inherit;
  -webkit-backface-visibility: hidden;
  background-color: transparent;
  border: 0.2rem solid #FFFFFF;
  color: #FFFFFF;
  font-family: GT Pressura Web,Arial Narrow,Arial,sans-serif;
  font-size: 1.2rem;
  -webkit-transition-duration: 400ms;
  transition-duration: 400ms;
  -webkit-transition-timing-function: cubic-bezier(0.390,0.575,0.565,1.000);
  transition-timing-function: cubic-bezier(0.390,0.575,0.565,1.000);
}

.emotion-0:active {
  outline: 0;
}

.emotion-0:hover {
  opacity: 0.75;
}

.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: .5;
}

<div>
    <button
      class="emotion-0 emotion-1"
      type="button"
    >
      Click Me!
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`an outline button renders correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  border: none;
  box-sizing: border-box;
  color: inherit;
  cursor: pointer;
  font: inherit;
  -webkit-letter-spacing: .24em;
  -moz-letter-spacing: .24em;
  -ms-letter-spacing: .24em;
  letter-spacing: .24em;
  line-height: 4rem;
  margin: 0;
  max-height: 4.4rem;
  opacity: 1;
  overflow: hidden;
  padding: 0 3.5rem;
  text-transform: uppercase;
  -webkit-transition-property: opacity;
  transition-property: opacity;
  width: auto;
  -moz-osx-font-smoothing: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-font-smoothing: inherit;
  -webkit-backface-visibility: hidden;
  background-color: transparent;
  border: 0.2rem solid #3150A2;
  color: #3150A2;
  font-family: GT Pressura Web,Arial Narrow,Arial,sans-serif;
  font-size: 1.2rem;
  -webkit-transition-duration: 400ms;
  transition-duration: 400ms;
  -webkit-transition-timing-function: cubic-bezier(0.390,0.575,0.565,1.000);
  transition-timing-function: cubic-bezier(0.390,0.575,0.565,1.000);
}

.emotion-0:active {
  outline: 0;
}

.emotion-0:hover {
  opacity: 0.75;
}

.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: .5;
}

<body>
    <div>
      <button
        class="emotion-0 emotion-1"
        type="button"
      >
        Click Me!
      </button>
    </div>
  </body>,
  "container": .emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  border: none;
  box-sizing: border-box;
  color: inherit;
  cursor: pointer;
  font: inherit;
  -webkit-letter-spacing: .24em;
  -moz-letter-spacing: .24em;
  -ms-letter-spacing: .24em;
  letter-spacing: .24em;
  line-height: 4rem;
  margin: 0;
  max-height: 4.4rem;
  opacity: 1;
  overflow: hidden;
  padding: 0 3.5rem;
  text-transform: uppercase;
  -webkit-transition-property: opacity;
  transition-property: opacity;
  width: auto;
  -moz-osx-font-smoothing: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-font-smoothing: inherit;
  -webkit-backface-visibility: hidden;
  background-color: transparent;
  border: 0.2rem solid #3150A2;
  color: #3150A2;
  font-family: GT Pressura Web,Arial Narrow,Arial,sans-serif;
  font-size: 1.2rem;
  -webkit-transition-duration: 400ms;
  transition-duration: 400ms;
  -webkit-transition-timing-function: cubic-bezier(0.390,0.575,0.565,1.000);
  transition-timing-function: cubic-bezier(0.390,0.575,0.565,1.000);
}

.emotion-0:active {
  outline: 0;
}

.emotion-0:hover {
  opacity: 0.75;
}

.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: .5;
}

<div>
    <button
      class="emotion-0 emotion-1"
      type="button"
    >
      Click Me!
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`an text button renders correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  border: none;
  box-sizing: border-box;
  color: inherit;
  cursor: pointer;
  font: inherit;
  -webkit-letter-spacing: .24em;
  -moz-letter-spacing: .24em;
  -ms-letter-spacing: .24em;
  letter-spacing: .24em;
  line-height: 4rem;
  margin: 0;
  max-height: 4.4rem;
  opacity: 1;
  overflow: hidden;
  padding: 0 3.5rem;
  text-transform: uppercase;
  -webkit-transition-property: opacity;
  transition-property: opacity;
  width: auto;
  -moz-osx-font-smoothing: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-font-smoothing: inherit;
  -webkit-backface-visibility: hidden;
  background-color: #3150A2;
  border: 0.2rem solid #3150A2;
  color: #FFFFFF;
  font-family: GT Pressura Web,Arial Narrow,Arial,sans-serif;
  font-size: 1.2rem;
  -webkit-transition-duration: 400ms;
  transition-duration: 400ms;
  -webkit-transition-timing-function: cubic-bezier(0.390,0.575,0.565,1.000);
  transition-timing-function: cubic-bezier(0.390,0.575,0.565,1.000);
  background: transparent;
  border: 0.2rem solid #FFFFFF;
  color: #3150A2;
  -webkit-letter-spacing: .2em;
  -moz-letter-spacing: .2em;
  -ms-letter-spacing: .2em;
  letter-spacing: .2em;
  padding: 0;
}

.emotion-0:active {
  outline: 0;
}

.emotion-0:hover {
  opacity: 0.75;
}

.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: .5;
}

<body>
    <div>
      <button
        class="emotion-0 emotion-1"
        type="button"
      >
        <svg
          class="emotion-2 emotion-3"
        />
      </button>
    </div>
  </body>,
  "container": .emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  border: none;
  box-sizing: border-box;
  color: inherit;
  cursor: pointer;
  font: inherit;
  -webkit-letter-spacing: .24em;
  -moz-letter-spacing: .24em;
  -ms-letter-spacing: .24em;
  letter-spacing: .24em;
  line-height: 4rem;
  margin: 0;
  max-height: 4.4rem;
  opacity: 1;
  overflow: hidden;
  padding: 0 3.5rem;
  text-transform: uppercase;
  -webkit-transition-property: opacity;
  transition-property: opacity;
  width: auto;
  -moz-osx-font-smoothing: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-font-smoothing: inherit;
  -webkit-backface-visibility: hidden;
  background-color: #3150A2;
  border: 0.2rem solid #3150A2;
  color: #FFFFFF;
  font-family: GT Pressura Web,Arial Narrow,Arial,sans-serif;
  font-size: 1.2rem;
  -webkit-transition-duration: 400ms;
  transition-duration: 400ms;
  -webkit-transition-timing-function: cubic-bezier(0.390,0.575,0.565,1.000);
  transition-timing-function: cubic-bezier(0.390,0.575,0.565,1.000);
  background: transparent;
  border: 0.2rem solid #FFFFFF;
  color: #3150A2;
  -webkit-letter-spacing: .2em;
  -moz-letter-spacing: .2em;
  -ms-letter-spacing: .2em;
  letter-spacing: .2em;
  padding: 0;
}

.emotion-0:active {
  outline: 0;
}

.emotion-0:hover {
  opacity: 0.75;
}

.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: .5;
}

<div>
    <button
      class="emotion-0 emotion-1"
      type="button"
    >
      <svg
        class="emotion-2 emotion-3"
      />
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
